2002-07-25  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_lead.adb: In starter shell mode, use first the main partition
	location and then the default boot location as boot location. Fix
	B725-004.

	* xe_check.adb: Check that location name is not empty string. Fix
	B725-004.

2002-07-11  Pascal Obry  <obry@gnat.com>

	* xe_utils.ads, xe_utils.adb:
	(Create): File parameter is set to mode out. Avoid GNAT warnings
	 about entity referenced before it has a value.
	Work for B711-005.

	* xe_parse.ads, xe_parse.adb:
	(Search_Matching_Parameter): Formal_Type set to mode out to avoid
	 GNAT warnings about entity referenced before it has a value.
	Work for B711-005.

2002-05-28  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_utils.adb: Fix style.

2002-05-11  Pascal Obry  <p.obry@wanadoo.fr>

	* xe_sysdep.ads, xe_sysdep-nt.adb, xe_sysdep-std.adb: Force_Remove
	removed. This code is not anymore platform dependant. 
	Work for B509-009.

	* xe_utils.ads:
	(Delete): Add comment.
	(Unlink_File): Removed, same as Delete.
	Work for B509-009.
	
	* xe_utils.adb:
	(Copy_With_File_Stamp): Use OS_Lib.Delete_File. Raise Fatal_Error if
	the file cannot be copied.
	(Delete): Minor code clean-up.
	(Unlink_File): Removed, same as Delete above.
	Work for B509-009.

	* xe_lead.adb:
	(XE_Lead): Call Delete_File instead of Unlink_File.
	Work for B509-009.

2002-05-09  Pascal Obry  <p.obry@wanadoo.fr>

	* xe_sysdep.ads, xe_sysdep-nt.adb, xe_sysdep-std.adb: Copy_File
	removed.

	* xe_utils.adb: (Copy_With_File_Stamp) Use Copy_File from GNAT.OS_Lib.
	Fix 9930-004.
	
2002-04-02  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe.adb: In the GLADE configuration language, an Ada unit has no
	attribute. But we should not raise an assertion failure when
	accessing to a non-existing attribute. Fix
	First_Variable_Component and First_Type_Component for 9916-002.

2002-01-28  Laurent Pautet  <pautet@arlequin.enst.fr>

	* Makefile.am, Makefile.in: Add -bargs -static to fix 9728-002.
